tests/lean/notNaturalNumbersGame.lean.expected.out
notNaturalNumbersGame.lean:6:20: error: unknown tactic
notNaturalNumbersGame.lean:6:14-6:20: error(lean.inductionWithNoAlts): Invalid syntax for induction tactic: The `with` keyword must followed by a tactic or by an alternative (e.g. `| zero =>`), but here it is followed by the identifier `n`.
